--- a/publication.html
+++ b/publication.html
@@ -62,7 +62,7 @@
             <li><a href="#testimonials">Alumuni</a></li>
             <li><a href="portfolio-details.html">Gallery</a></li>
             <li><a href="team.html">Faculty&Staff</a></li>
-            <li><a href="student.html">Students</a></li>
+            <li><a href="publication.html">Publications</a></li>
                <a href="#contact">Contact</a></li>
       </ul>
       <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -142,7 +142,7 @@
       <div class="col-lg-2 col-md-5 footer-links" >
         <h4>UG Courses</h4>
         <ul>
-          <li><i class="bi bi-chevron-right"></i> <a href="#">B.E.- Civil Engineering</a></li>
+          <li><i class="bi bi-chevron-right"></i> <a href="https://ssmiet.ac.in/civil.html">B.E.- Civil Engineering</a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="#">B.E.- Computer Science and Engineering </a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="#">B.E.- Electronics and Communication Engineering</a></li>
           <li><i class="bi bi-chevron-right"></i> <a href="#">B.E.- Electrical and Electronics Engineering</a></li>
