--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li><a href="#testimonials">Alumuni</a></li>
             <li><a href="portfolio-details.html">Gallery</a></li>
             <li><a href="team.html">Faculty&Staff</a></li>
-            <li><a href="student.html">Students</a></li>
+            <li><a href="publication.html">Publications</a></li>
 
             <!-- <li class="dropdown"><a href="#"><span>Students</span></li></a>
               <ul>
@@ -276,7 +276,7 @@
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6 d-flex flex-column align-items-center">
-            <i class="bi bi-headset"></i>
+            <i class="bi-broadcast"></i>
             <div class="stats-item">
               <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
               <p>Companies</p>
@@ -703,7 +703,7 @@
         <div class="col-lg-2 col-md-5 footer-links" >
           <h4>UG Courses</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">B.E.- Civil Engineering</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="https://ssmiet.ac.in/civil.html">B.E.- Civil Engineering</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">B.E.- Computer Science and Engineering </a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">B.E.- Electronics and Communication Engineering</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">B.E.- Electrical and Electronics Engineering</a></li>
