--- a/team.html
+++ b/team.html
@@ -62,7 +62,7 @@
             <li><a href="#services">Alumini</a></li>
             <li><a href="portfolio-details.html">Gallery</a></li>
             <li><a href="team.html">Faculty&Staff</a></li>
-            <li class="dropdown"><a href="#"><span>Students</span></a>
+            <li class="dropdown"><a href="publication.html"><span>Publications</span></a>
               <!-- <i class="bi bi-chevron-down toggle-dropdown"></i> -->
               <!-- <ul> -->
 <!--                
@@ -562,7 +562,7 @@
         <div class="col-lg-2 col-md-5 footer-links" >
           <h4>UG Courses</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">B.E.- Civil Engineering</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="https://ssmiet.ac.in/civil.html">B.E.- Civil Engineering</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">B.E.- Computer Science and Engineering </a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">B.E.- Electronics and Communication Engineering</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">B.E.- Electrical and Electronics Engineering</a></li>
