--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <img src="assets/img/about.jpg.jpeg" alt="" class="img-fluid">
-            <img src="assets/img/about.jpg.jpeg" alt="" class="img-fluid">
+            <img src="assets/img/about1.jpg" alt="" class="img-fluid">
 
           </div>
           
