--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -373,7 +373,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <!-- <p>© <span>Copyright</span> <strong class="px-1 sitename">BizLand</strong> <span>All Rights Reserved</span></p> -->
+      <!-- <p>© <span>Copyright</span> <strong class="px-1 sitename"></strong> <span>All Rights Reserved</span></p> -->
       <div class="credits">
         Designed by <a href="https://www.linkedin.com/in/clement-savari-doss-696344292?utm_source=share&utm_campaign
         =share_via&utm_content=profile&utm_medium=android_app">STUDENT OF SSMIET</a> 
