--- a/team.html
+++ b/team.html
@@ -164,7 +164,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Dr.Karthigailakshmi</h4>
+                <h4>Dr.S.Karthigailakshmi</h4>
                 <span>Head Of the Department</span>
               </div>
             </div>
@@ -182,7 +182,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Dr.Rajarajeshwari</h4>
+                <h4>Dr.G.Rajarajeshwari</h4>
                 <span>Assistant Professor</span>
               </div>
             </div>
@@ -236,7 +236,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Dr.Carol Praveen</h4>
+                <h4>Dr.R.Carol Praveen</h4>
                 <span>Assosiate Professor</span>
               </div>
             </div>
@@ -272,7 +272,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Dr.Jay Fantin</h4>
+                <h4>Dr.V.P.Jay Fantin</h4>
                 <span>Assosiate Professor</span>
               </div>
             </div>
@@ -323,7 +323,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Dr.Karthiga</h4>
+                <h4>Dr.P.Karthiga</h4>
                 <span>Assistant Professor</span>
               </div>
             </div>
@@ -425,7 +425,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Dr.Keerthana</h4>
+                <h4>Dr.S.Keerthana</h4>
                 <span>Assistant Professor</span>
               </div>
             </div>
@@ -442,7 +442,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Dr.Geetha</h4>
+                <h4>Dr.A.Geetha</h4>
                 <span>Assistant Professor</span>
               </div>
             </div>
@@ -459,7 +459,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Dr.Sathya shivaranjani</h4>
+                <h4>Dr.S.Sathya shivaranjani</h4>
                 <span>Assistant Professor</span>
               </div>
             </div>
