--- a/publication.html
+++ b/publication.html
@@ -104,6 +104,8 @@
     <!-- PDF 1 -->
     <h3>News Letter</h3>
     <p>July to December-2024</p>
+    <a href="assets/pdf/july - dec 2024 (1).pdf" download>Download PDF</a>
+
     <iframe src="assets/pdf/july - dec 2024 (1).pdf" class="pdf-viewer"></iframe>
     <a href="assets/pdf/july - dec 2024 (1).pdf" target="_blank" class="pdf-link">Open in New Tab</a>
 
