--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 <!--                
               </ul>
             </li> -->
+            <li><a href="vac.html">VAC</a></li>
+
             <li><a href="#contact">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
