--- a/team.html
+++ b/team.html
@@ -94,6 +94,8 @@
 <!--                
               </ul>
             </li> -->
+            <li><a href="vac.html">VAC</a></li>
+
             <li><a href="#contact">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -477,7 +479,7 @@
               </div>
               <div class="member-info">
                 <h4>Mr.Vairamani</h4>
-                <span>Lab In Charge</span>
+                <span>Lab Assistant</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -494,7 +496,7 @@
               </div>
               <div class="member-info">
                 <h4>Mr.M.Balachandran</h4>
-                <span>Lab In Charge</span>
+                <span>Lab Assistant</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -511,7 +513,7 @@
               </div>
               <div class="member-info">
                 <h4>Mrs.R.Soundira pandiyammal</h4>
-                <span>Lab In Charge</span>
+                <span>Lab Assistant</span>
               </div>
             </div>
           </div><!-- End Team Member -->
@@ -528,7 +530,7 @@
               </div>
               <div class="member-info">
                 <h4>Mrs.V.Kalaiselvi</h4>
-                <span>Lab In Charge</span>
+                <span>Lab Assistant</span>
               </div>
             </div>
           </div><!-- End Team Member -->
