--- a/vac.html
+++ b/vac.html
@@ -106,9 +106,9 @@
     <!-- PDF 1 -->
     <h3>News Letter</h3>
     <p>July to December-2024</p>
-    <a href="assets/pdf/july - dec 2024 (1).pdf" download>Download PDF</a>
-    <iframe src="assets/pdf/july - dec 2024 (1).pdf" class="pdf-viewer"></iframe>
-    <a href="assets/pdf/july - dec 2024 (1).pdf" target="_blank" class="pdf-link">Open in New Tab</a>
+    <a href="" download>Download PDF</a>
+    <iframe src="" class="pdf-viewer"></iframe>
+    <a href="" target="_blank" class="pdf-link">Open in New Tab</a>
 
     <!-- PDF 2 -->
     <h3>PDF File 2</h3>
