--- a/vac.html
+++ b/vac.html
@@ -112,13 +112,17 @@
 
     <!-- PDF 2 -->
     <h3>PDF File 2</h3>
-    <iframe src="pdfs/file2.pdf" class="pdf-viewer"></iframe>
-    <a href="pdfs/file2.pdf" target="_blank" class="pdf-link">Open in New Tab</a>
+    <p></p>
+    <a href="" download>Download PDF</a>
+    <iframe src="" class="pdf-viewer"></iframe>
+    <a href="" target="_blank" class="pdf-link">Open in New Tab</a>
 
     <!-- PDF 3 -->
     <h3>PDF File 3</h3>
-    <iframe src="pdfs/file3.pdf" class="pdf-viewer"></iframe>
-    <a href="pdfs/file3.pdf" target="_blank" class="pdf-link">Open in New Tab</a>
+    <p></p>
+    <a href="" download>Download PDF</a>
+    <iframe src="" class="pdf-viewer"></iframe>
+    <a href="" target="_blank" class="pdf-link">Open in New Tab</a>
 
 
 </section><!-- /Portfolio Details Section -->
