--- a/publication.html
+++ b/publication.html
@@ -112,11 +112,13 @@
 
     <!-- PDF 2 -->
     <h3>PDF File 2</h3>
+    <a href="" download>Download PDF</a>
     <iframe src="" class="pdf-viewer"></iframe>
     <a href="" target="_blank" class="pdf-link">Open in New Tab</a>
 
     <!-- PDF 3 -->
     <h3>PDF File 3</h3>
+    <a href="" download>Download PDF</a>
     <iframe src="" class="pdf-viewer"></iframe>
     <a href="" target="_blank" class="pdf-link">Open in New Tab</a>
 
