--- a/vac.html
+++ b/vac.html
@@ -81,7 +81,7 @@
   <!-- Page Title -->
   <div class="page-title" data-aos="fade">
     <div class="container d-lg-flex justify-content-between align-items-center">
-      <h1 class="mb-2 mb-lg-0">Publications</h1>
+      <h1 class="mb-2 mb-lg-0">Value Added Courses</h1>
       <nav class="breadcrumbs">
         <ol>
           <li><a href="index.html">Home</a></li>
@@ -98,31 +98,38 @@
   <!-- Section Title -->
   <div class="container section-title" data-aos="fade-up">
     <h2>Pdf Files</h2>
-    <p><span>ECE dept Students and Faculties </span> <span class="description-title">Publications</span></p>
+    <p><span>Value Added </span> <span class="description-title">Course</span></p>
   </div><!-- End Section Title -->
 <!-- <div class="box"></div> -->
    <div class="container">
 
-    <!-- PDF 1 -->
-    <h3>News Letter</h3>
-    <p>July to December-2024</p>
+    <!--PDF 1-->
+    <!-- <h3>2024-2025</h3>
+    <p>Value Added Course</p>
     <a href="" download>Download PDF</a>
     <iframe src="" class="pdf-viewer"></iframe>
-    <a href="" target="_blank" class="pdf-link">Open in New Tab</a>
+    <a href="" target="_blank" class="pdf-link">Open in New Tab</a> -->
 
     <!-- PDF 2 -->
-    <h3>PDF File 2</h3>
-    <p></p>
-    <a href="" download>Download PDF</a>
-    <iframe src="" class="pdf-viewer"></iframe>
-    <a href="" target="_blank" class="pdf-link">Open in New Tab</a>
+    <h3>2024-2025</h3>
+    <p>Value Added Course</p>
+    <a href="assets/pdf/VAC 2024-2025.pdf" download>Download PDF</a>
+    <iframe src="assets/pdf/VAC 2024-2025.pdf" class="pdf-viewer"></iframe>
+    <a href="assets/pdf/VAC 2024-2025.pdf" target="_blank" class="pdf-link">Open in New Tab</a>
 
     <!-- PDF 3 -->
-    <h3>PDF File 3</h3>
-    <p></p>
-    <a href="" download>Download PDF</a>
-    <iframe src="" class="pdf-viewer"></iframe>
-    <a href="" target="_blank" class="pdf-link">Open in New Tab</a>
+    <h3>2023-2024</h3>
+    <p>Value Added Course</p>
+    <a href="assets/pdf/VAC-Website-2023-24.pdf" download>Download PDF</a>
+    <iframe src="assets/pdf/VAC-Website-2023-24.pdf" class="pdf-viewer"></iframe>
+    <a href="assets/pdf/VAC-Website-2023-24.pdf" target="_blank" class="pdf-link">Open in New Tab</a>
+
+    <!-- PDF 4 -->
+    <h3>2018-2023</h3>
+    <p>Value Added Course</p>
+    <a href="assets/pdf/VAC.pdf" download>Download PDF</a>
+    <iframe src="assets/pdf/VAC.pdf" class="pdf-viewer"></iframe>
+    <a href="assets/pdf/VAC.pdf" target="_blank" class="pdf-link">Open in New Tab</a>
 
 
 </section><!-- /Portfolio Details Section -->
