--- a/vac.html
+++ b/vac.html
@@ -61,8 +61,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#testimonials">Alumuni</a></li>
             <li><a href="portfolio-details.html">Gallery</a></li>
-            <li><a href="team.html">Faculty&Staff</a></li>
-            <li><a href="publication.html">Publications</a></li>
+            <li><a href="faculty/faculty.html">Faculty&Staff</a></li>
             <li><a href="vac.html">VAC</a></li>
 
                <a href="#contact">Contact</a></li>
